# Quantum-Circuit-Game-Engine

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: publish-to-pypi.yml
qcge/: __init__.py  configs.py  ir.py  quantum_circuit.py  result.py
qcge/backends/: __init__.py  base.py  numpy_backend.py  python_backend.py  qiskit_backend.py  registry.py
tests/: conftest.py  test_equivalence.py  test_ir.py  test_numpy_backend.py  test_registry_and_result.py
